infra/gke/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inference
  labels:
    app.kubernetes.io/managed-by: segov-dev
